<resources>
    <string name="app_name">Wavin SE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popupString">You can contact our Sales Executive to avail a Dream Gift. Any product not available in our Catalogue can be requested as a Dream gift as long as it is available for dispatch from leading e-commerce sites or recognised dealerships.

Wavin reserves the right to accept or reject the dream gift request.

Once approved, the required points will be displayed in your app under this section</string>

    <!--============Under Maintainance & Update Alert===================-->
    <string name="under_maintaince">Under Maintenance!</string>
    <string name="new_update_available">New update available!</string>
    <string name="update_now">UPDATE NOW</string>
    <string name="UPDATE_MESSAGE">By downloading the latest update you will get the latest features, improvements and bug fixes of Wavin SE</string>
    <string name="UPDATE_MESSAGES">Update is available for Wavin SE</string>
    <string name="maintainance_msg">The app is unable to access the services as the system is down for maintenance! Please try after sometime.</string>
    <string name="exit">Exit</string>
    <!--============EOF Under Maintainance===================-->


</resources>