<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.ForceUpdateAndMaintenance.MaintenanceActivity">

<LinearLayout
    android:id="@+id/linearLayout7"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    android:visibility="visible"
    android:weightSum="10"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:weightSum="10">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/h1"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/h1"
            android:layout_weight="7"
            android:background="@color/primary_color"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:src="@drawable/wavinlogo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/h3"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/under_maintaince"
            android:textColor="@color/dark"
            android:textSize="@dimen/h2" />

    </LinearLayout>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        app:lottie_autoPlay="true"
        app:lottie_fileName="gears.json"
        app:lottie_loop="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_small_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_small_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:padding="@dimen/activity_vertical_small_margin"
            android:text="@string/maintainance_msg"
            android:textAlignment="center"
            android:textColor="@color/dark"
            android:textSize="@dimen/h3" />

        <Button
            android:id="@+id/exit"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_gravity="center|bottom"
            android:layout_margin="@dimen/h3"
            android:backgroundTint="@color/primary_color"
            android:text="@string/exit"
            android:textColor="@color/light_white" />


    </LinearLayout>


</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>