<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ForceUpdateAndMaintenance.ForceUpdateActivity">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:weightSum="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/h1"
            android:layout_marginTop="@dimen/h1"
            android:layout_marginEnd="@dimen/h1"
            android:layout_marginBottom="@dimen/h1"
            android:layout_weight="2"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@color/primary_color"
            android:src="@drawable/wavinlogo"   />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="4"
            app:lottie_autoPlay="true"
            app:lottie_fileName="force_update.json"
            app:lottie_loop="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h4"
                android:gravity="center"
                android:text="@string/UPDATE_MESSAGES"
                android:textColor="@color/dark"
                android:textSize="17sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_small_margin"
                android:layout_marginTop="@dimen/h7"
                android:layout_marginRight="@dimen/activity_vertical_small_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:padding="@dimen/activity_vertical_small_margin"
                android:text="@string/UPDATE_MESSAGE"
                android:textAlignment="center"
                android:textColor="@color/dark"
                android:textSize="14sp" />

            <Button
                android:id="@+id/forceupdate"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_gravity="center|bottom"
                android:layout_margin="@dimen/h3"
                android:background="@color/primary_color"
                android:backgroundTint="@color/primary_color"
                android:text="@string/update_now"
                android:textColor="@color/light_white" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>